<resources>
    <string name="app_name">Pole-Vault-Tracker</string>
    <string name="new_game_btn_text">New Record</string>
    <string name="history_btn_text">History</string>
    <string name="player_name_edit_text_hint">Player Name</string>
    <string name="location_edit_text_hint">Location</string>
    <string name="start_game_btn_text">Go to Events</string>
    <string name="new_jump_btn_text">Add Jump</string>
    <string name="game_list_row_player_name_text_view_text">Player Name</string>
    <string name="game_list_row_location_text_view_text">Location</string>
    <string name="meters_text">meter(s)</string>
    <string name="jump_height_edit_text_hint">Jump Height</string>
    <string name="jump_description_edit_text_hint">Description</string>
    <string name="successful_text">Successful</string>
    <string name="unsuccessful_text">Unsuccessful</string>
    <string name="previous_games_text_view_text">5 Previous Records</string>
    <string name="title_activity_full_history">Full Games History</string>

    <string-array name="languages_array">
        <item>French</item>
        <item>English</item>
    </string-array>

    <string name="tenant_name_edit_text">Logged in as</string>
</resources>