<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tooltipText="@string/app_name"
    tools:context=".EditJump">

    <CheckBox
        android:id="@+id/successful_jump_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/successful_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:suffixText="@string/meters_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jump_height_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jump_height_edit_text_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jump_description_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:endIconDrawable="@android:drawable/ic_menu_camera"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jump_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jump_description_edit_text_hint" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>